Revision history for Coverage::Server

          - Updated skip lists
          - Uses Web::Components
          - Accepts summaries serves badges

0.1.1     2015-06-10 12:27:48
          - Added project files to master branch
